Fix spacing for listings [skip chromatic]

--- a/src/themes/default/src/scss/_section.scss
+++ b/src/themes/default/src/scss/_section.scss
@@ -11,7 +11,7 @@ $bcl-spacing-xl: 3rem;
 .bcl-facts-figures,
 .bcl-featured-item,
 .bcl-listing {
-  .bcl-heading {
+  > .bcl-heading {
     margin-bottom: $bcl-spacing-m;
   }
 }
@@ -72,7 +72,7 @@ $bcl-spacing-xl: 3rem;
   .bcl-featured-item,
   .bcl-facts-figures,
   .bcl-listing {
-    .bcl-heading {
+    > .bcl-heading {
       margin-bottom: $bcl-spacing-xl;
     }
   }
